# worster-underwood-cfb

./: .gitignore  README.md  dockerfile  operations.txt  pyproject.toml
.github/workflows/: ci.yml  daily.yml
batch/: database.py  main.py  model.py  sheets.py
notebooks/: Data.ipynb  data.ipynb  transform.ipynb
notebooks/.ipynb_checkpoints/: Data-checkpoint.ipynb
worster_underwood_cfb/: __init__.py  old prod.ipynb  wu old.py
worster_underwood_cfb/data/: __init__.py  cfbd_api.py
worster_underwood_cfb/models/: __init__.py  underwood.py  worster.py
worster_underwood_cfb/transform/: __init__.py  schedule.py
