[project]
name = "worster-underwood-cfb"
version = "0.1.0"
description = "An ensemble college football model system using both power ratings (Underwood) and resume ratings (Worster) to create a composite ranking."
authors = [
    {name = "Winston Underwood"}, 
    {name = "Hank Worster"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "requests",
    "numpy",
    "bs4",
    "scipy",
    "cfbd",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest",
  "black",
  "nbstripout",
  "jupyterlab",
  "jupyterlab-git",
  "ipykernel>=6.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["worster_underwood_cfb"]
